RESOLVED FIXED44193
Fix a clip problem in the in composite operation for svg filters
https://bugs.webkit.org/show_bug.cgi?id=44193
Summary Fix a clip problem in the in composite operation for svg filters
Dave Hyatt
Reported 2010-08-18 11:39:31 PDT
I made a typo in my previous checkin that swapped the arguments of clipToImageBuffer.
Attachments
Patch (1.43 KB, patch)
2010-08-18 11:39 PDT, Dave Hyatt
mrobinson: review+
Dave Hyatt
Comment 1 2010-08-18 11:39:48 PDT
Dave Hyatt
Comment 2 2010-08-18 11:42:39 PDT
This is covered by pixel test of svg/filters/feComposite.svg
Martin Robinson
Comment 3 2010-08-18 11:44:05 PDT
Comment on attachment 64745 [details] Patch LGTM!
Dave Hyatt
Comment 4 2010-08-18 11:45:39 PDT
Fixed in r65621.
Note You need to log in before you can comment on or make changes to this bug.