https://bugs.webkit.org/show_bug.cgi?id=44193

Reviewed by Martin Robinson.

Fix a typo in my previous canvas checkin.  m_in->resultImage() was originally m_in2->resultImage(),
and I accidentally changed it when swapping the order of the arguments.

* platform/graphics/filters/FEComposite.cpp:
(WebCore::FEComposite::apply):



Canonical link: https://commits.webkit.org/56404@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@65621 268f45cc-cd09-0410-ab3c-d52691b4dbfc